--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
     <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/R.40718e299307f2cbcd1957e2efcffe2e?rik=u5FRvSkJDv4AAg&pid=ImgRaw&r=0">
-    <link rel="stylesheet" href="https://thinhnguyen1211.github.io/style.css">
+    <link rel="stylesheet" href="https://thinhnguyen1211.github.io/css/style.css">
     <link rel="stylesheet" href="https://thinhnguyen1211.github.io/themify-icons.css">
-    <link rel="stylesheet" href="https://thinhnguyen1211.github.io/responsive.css">
+    <link rel="stylesheet" href="https://thinhnguyen1211.github.io/css/responsive.css">
 </head>
 <body>
     <div id="main">
