--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 <div class="members-list">
                     <div class="col col-third text-center">
                         <p class="members-name">Name</p>
-                        <img src="https://thinhnguyen1211.github.io/assets/img/members/member1.jpg" alt="Name" class="members-img">
+                        <img src="https://thinhnguyen1211.github.io/img/members/member1.jpg" alt="Name" class="members-img">
                     </div>
                     <div class="col col-third text-center">
                         <p class="members-name">Name</p>
-                        <img src="https://thinhnguyen1211.github.io/assets/img/members/member1.jpg" alt="Name" class="members-img">
+                        <img src="https://thinhnguyen1211.github.io/img/members/member1.jpg" alt="Name" class="members-img">
                     </div>
                     <div class="col col-third text-center">
                         <p class="members-name">Name</p>
-                        <img src="https://thinhnguyen1211.github.io/assets/img/members/member1.jpg" alt="Name" class="members-img">
+                        <img src="https://thinhnguyen1211.github.io/img/members/member1.jpg" alt="Name" class="members-img">
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -83,7 +83,7 @@
             <!-- places -->
                     <div class="row places-list">
                         <div class="col col-third">
-                            <img src="https://thinhnguyen1211.github.io/assets/img/places/place1.jpg" alt="New york" class="places-img">
+                            <img src="https://thinhnguyen1211.github.io/img/places/place1.jpg" alt="New york" class="places-img">
                             <div class="places-body">
                                 <h3 class="places-heading">New York</h3>
                                 <p class="places-time">Fri 27 Nov 2016</p>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="col col-third">
-                            <img src="https://thinhnguyen1211.github.io/assets/img/places/place2.jpg" alt="Paris" class="places-img">
+                            <img src="https://thinhnguyen1211.github.io/img/places/place2.jpg" alt="Paris" class="places-img">
                             <div class="places-body">
                                 <h3 class="places-heading">Paris</h3>
                                 <p class="places-time">Sat 28 Nov 2016</p>
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <div class="col col-third">
-                            <img src="https://thinhnguyen1211.github.io/assets/img/places/place3.jpg" alt="San Francisco" class="places-img">
+                            <img src="https://thinhnguyen1211.github.io/img/places/place3.jpg" alt="San Francisco" class="places-img">
                             <div class="places-body">
                                 <h3 class="places-heading">San Francisco</h3>
                                 <p class="places-time">Sun 29 Nov 2016</p>
@@ -147,7 +147,7 @@
             </div>
              <!-- End: contact-section -->
                 <div class="map-section">
-                    <img src="https://thinhnguyen1211.github.io/assets/img/places/Map1.jpg" alt="Map">
+                    <img src="https://thinhnguyen1211.github.io/img/places/Map1.jpg" alt="Map">
                 </div>
 
         <div id="footer">
