--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://thinhnguyen1211.github.io/css/style.css">
     <link rel="stylesheet" href="https://thinhnguyen1211.github.io/themify-icons.css">
     <link rel="stylesheet" href="https://thinhnguyen1211.github.io/css/responsive.css">
+    <link rel="stylesheet" href="/W3_TheBand/assets/css/style.css">
+    <link rel="stylesheet" href="/W3_TheBand/assets/css/responsive.css">
 </head>
 <body>
     <div id="main">
@@ -245,12 +247,16 @@
         var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
         for (var i = 0; i < menuItems.length; i++) {
             var menuItem = menuItems[i];
-
-            menuItem.onclick = function() {
-                header.style.height = null;
+            
+            menuItem.onclick = function(event) {
+                var isParentMenu = this.nextElementSibling && menuItem.nextElementSibling.classlist.contains('subnav');
+                if (isParentMenu) {
+                    event.preventDefault();
+                } else {
+                    header.style.height = null;
+                }
+            }
         }
-    }
     </script>
-
 </body>
 </html>
