--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://thinhnguyen1211.github.io/css/responsive.css">
     <link rel="stylesheet" href="/W3_TheBand/assets/css/style.css">
     <link rel="stylesheet" href="/W3_TheBand/assets/css/responsive.css">
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js" integrity="sha512-BWbLJlfp8hzXlxT6K5KLdxPVAj+4Zn2e4FVq5P7NSFH/mkAJ18UiZRQUD4anR3jyp0/WYkeZ0Zmq5EWWrDxneQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <![endif]-->
 </head>
 <body>
     <div id="main">
